Lab 7 - Add constructor and display result in table

--- a/sales.html
+++ b/sales.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html> 
+
 <html>
   <head>
+    <meta charset="utf-8"/>
     <title> Seattle Salmon cookies Sales details</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/salesTableStyle.css">
   </head>
   <body>
     <h1> Seattle Salmon Cookies Sales details</h1>
@@ -11,20 +14,10 @@
     <p class=bold> This is a secured page </p>
 
     <!-- Contents generated dynamically through Java script-->
-    <h2>1st and Pike</h2>
-    <ul id="1standpike"></ul>
-
-    <h2>SeaTac Airport</h2>
-    <ul id="seatacairport"></ul>
-
-    <h2>Seattle Center</h2>
-    <ul id="seattlecenter"></ul>
-
-    <h2>Capitol Center</h2>
-    <ul id="capitolhill"></ul>
-
-    <h2>Alki</h2>
-    <ul id="alki"><ul>
+    <main>
+      <table id = "cookie_sales">
+      </table>
+    </main>
 
     <script src="./js/app.js"></script>
   </body>
